--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding-bottom: 4vh;
+  padding-bottom: calc(4vh + var(--eu-bar-clearance));
   color: #fff;
 }
 
@@ -145,6 +145,6 @@
     display: none;
   }
   .content {
-    padding-bottom: 3vh;
+    padding-bottom: calc(3vh + var(--eu-bar-clearance));
   }
 }
